# fast-down-js

./: .gitattributes  .gitignore  Cargo.toml  README.md  browser.js  fast-down-js.wasi-browser.js  fast-down-js.wasi.cjs  fast-down.wasi-browser.js  fast-down.wasi.cjs  index.d.ts  index.js  main.ts  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.ts  tsconfig.json
example/: cancel-abort-signal.ts  cancel-task.ts  cancel-token.ts  print-progress.ts
lib/: index.ts  merge.ts  task.ts
src/: cancel.rs  config.rs  download.rs  error.rs  event.rs  lib.rs  prefetch.rs  url_info.rs
