
[package]
authors = ["share121 <me@s121.top>"]
edition = "2021"
name = "fast_down"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fast-down-ffi = "0.1.4"
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
parking_lot = "0.12.5"
sanitize-filename = "0.6.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
